Fix content center alignment
Made the content div flex grow with flex:auto; and
justify-content: center, making the container fill the empty space that
was priviously split between the content and the footer.

Noticed this while comparing the solution webpage to my own, hadn't
looked at the solution.css yet

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -48,6 +48,8 @@ a {
 .content {
   display: flex;
   flex-direction: column;
+  flex: auto;
+  justify-content: center;
   align-items: center;
   margin: auto;
 }
@@ -64,6 +66,7 @@ a {
 .footer {
   display: flex;
   margin-top: auto;
+  justify-self: end;
   justify-content: space-between;
   padding: 16px;
   background-color: #eeeeee;
